docs: streamline docs site and fix test suites